fixed map overlapping

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -255,8 +255,9 @@ ul#popups {
   left: 0px;
   top: 7%;
   border-radius: 5px;
-  position: absolute;
-  z-index: 200;
+  position: static;
+  /*z-index: 200;*/
+  margin-top: -8px;
 }
 
 #direction-button {
